errors
make -C /lib/modules/4.15.0-22-generic/build M=/home/detamos/testing/iodriver modules
make[1]: Entering directory '/usr/src/linux-headers-4.15.0-22-generic'
  CC [M]  /home/detamos/testing/iodriver/iodriver.o
In file included from /home/detamos/testing/iodriver/iodriver.c:4:0:
./arch/x86/include/asm/uaccess.h: In function ‘set_fs’:
./arch/x86/include/asm/uaccess.h:32:9: error: dereferencing pointer to incomplete type ‘struct task_struct’
  current->thread.addr_limit = fs;
         ^~
/home/detamos/testing/iodriver/iodriver.c: At top level:
/home/detamos/testing/iodriver/iodriver.c:22:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
  .write = device_write,
           ^~~~~~~~~~~~
/home/detamos/testing/iodriver/iodriver.c:22:11: note: (near initialization for ‘fops.write’)
/home/detamos/testing/iodriver/iodriver.c: In function ‘device_read’:
/home/detamos/testing/iodriver/iodriver.c:69:8: error: ‘ptr’ undeclared (first use in this function)
  while(ptr != NULL && buffer != NULL)
        ^~~
/home/detamos/testing/iodriver/iodriver.c:69:8: note: each undeclared identifier is reported only once for each function it appears in
At top level:
/home/detamos/testing/iodriver/iodriver.c:9:12: warning: ‘Delay’ defined but not used [-Wunused-variable]
 static int Delay;
            ^~~~~
cc1: some warnings being treated as errors
scripts/Makefile.build:339: recipe for target '/home/detamos/testing/iodriver/iodriver.o' failed
make[2]: *** [/home/detamos/testing/iodriver/iodriver.o] Error 1
Makefile:1552: recipe for target '_module_/home/detamos/testing/iodriver' failed
make[1]: *** [_module_/home/detamos/testing/iodriver] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-4.15.0-22-generic'
Makefile:4: recipe for target 'all' failed
make: *** [all] Error 2
